# prompted-segmentation-for-drywall-QA

./: .gitignore  README.md  implementation_guide_v1.md  main.py  pyproject.toml  report.md  reportv2.md
src/: dataset.py  load.py  main.py  metrics.py  process.py  train.py  train_nb.ipynb  visualize.py
